# Spravce_souboru2

./: CMakeLists.txt
Spravce_souboru2/: CMakeLists.txt  Funkce.cpp  Spravce_souboru2.cpp  Spravce_souboru2.h  getopt.h  unistd.h
